--- a/tictactoe.html
+++ b/tictactoe.html
@@ -115,8 +115,7 @@
   <!-- Javascript -->
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <script type="text/javascript" src="jquery.min.js"></script>
-  <!-- <script type="text/javascript" src="tictactoe.js"> -->
-  <script type="text/javascript" src="try3.js">
+  <script type="text/javascript" src="tictactoe.js">
   </script>
 </body>
 
