--- a/tictactoe.html
+++ b/tictactoe.html
@@ -115,8 +115,8 @@
   <!-- Javascript -->
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <script type="text/javascript" src="jquery.min.js"></script>
-  <script type="text/javascript" src="tictactoe.js">
-  </script>
+  <script type="text/javascript" src="tictactoe.js"></script>
+  <script type="text/javascript" src="minimax.js"></script>
 </body>
 
 </html>
