Updated aiTurn logic and bug fixes
Updated the aiTurn logic to be cleaner.
Fixed bug related to AI taking turns it shouldn't be taking.
Fixed bug where the displayed player displayed the wrong player.
Fixed bug where displayed player didn't change.

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -23,7 +23,9 @@
       <div class="headers justify-content-center hidden">
         <!-- Headers for direction on whose turn it is  -->
         <div class="two-player-turn-header">
-          <div class="player-turn player-1-header text-center">
+          <div class="player-turn player-header text-center">
+          </div>
+          <div class="player-turn player-1-header text-center hidden">
           </div>
           <div class="player-turn player-2-header text-center hidden">
           </div>
@@ -113,10 +115,9 @@
   </div>
 
   <!-- Javascript -->
-  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
-  <script type="text/javascript" src="jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <!-- <script type="text/javascript" src="jquery.min.js"></script> -->
   <script type="text/javascript" src="tictactoe.js"></script>
-  <script type="text/javascript" src="minimax.js"></script>
 </body>
 
 </html>
