--- a/tictactoe.html
+++ b/tictactoe.html
@@ -65,7 +65,7 @@
               <div class="level easy text-center">
                 <h3>Easy</h3></div>
                 <div class='level impossible text-center'>
-                  <h3>Impossible</h3></div>
+                  <h3>Difficult</h3></div>
           </div>
         </div>
 
