Code cleanup and added jsdocs
Condensed some of the JS code - there's still work to do there, but it is looking a little better.
Additionally, I added jsdocs documentation.

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -50,9 +50,9 @@
           <div class="player-order justify-content-center text-center">
             <div class=text-center>
               <h3 class="order-question">Which player do you want to be?</h3></div>
-            <div class="player first-player text-center">
+            <div class="order player first-player text-center">
               <h3>First player</h3></div>
-            <div class='player second-player text-center'>
+            <div class='order player second-player text-center'>
               <h3>Second Player</h3></div>
           </div>
         </div>
